--- a/package.json
+++ b/package.json
@@ -22,18 +22,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "react-router-dom": "^6.30.2"
+    "react-router-dom": "^6.30.2",
+    "tailwindcss": "^4.1.18"
   },
   "browsersList": [
     "Last 2 Chrome version"
   ],
   "devDependencies": {
-    "parcel": "^1.12.4",
+    "parcel": "^2.16.3",
     "parcel-bundler": "^1.12.3"
   },
   "resolutions": {
-  "@babel/preset-env": "7.13.8"
-}
+    "@babel/preset-env": "7.13.8"
+  }
 }
