--- a/package.json
+++ b/package.json
@@ -19,14 +19,12 @@
   "type": "commonjs",
   "scripts": {
     "start": "parcel index.html",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/postcss": "^4.1.18",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.2",
     "tailwindcss": "^4.1.18"
   },
@@ -34,8 +32,13 @@
     "Last 2 Chrome version"
   ],
   "devDependencies": {
-    "parcel": "^2.16.3",
-    "parcel-bundler": "^1.12.3"
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "babel-jest": "^30.2.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
