--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/postcss": "^4.1.18",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.2",
     "tailwindcss": "^4.1.18"
   },
@@ -38,9 +40,13 @@
     "@testing-library/react": "^16.3.0",
     "babel-jest": "^30.2.0",
     "jest": "^30.2.0",
-    "jest-environment-jsdom": "^30.2.0"
+    "jest-environment-jsdom": "^30.2.0",
+    "parcel": "^2.16.3"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
